--- a/custom_components/mac_tracker/manifest.json
+++ b/custom_components/mac_tracker/manifest.json
@@ -1,8 +1,9 @@
 {
-  "domain": "mac_presence",
+  "domain": "mac_tracker",
   "name": "MAC Presence Tracker",
   "version": "1.0.0",
   "documentation": "https://github.com/lollobaldo/home-assistant-mac-tracker",
+  "config_flow": true,
   "iot_class": "local_polling",
   "requirements": ["scapy"],
   "dependencies": [],
